--- a/lib/rton-tl/Cargo.toml
+++ b/lib/rton-tl/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rton-tl"
 version = "0.1.0-alpha.1"
 edition = "2021"
+license = "MIT"
+description = "A Rust library for parsing and serializing TL-B schemes"
 
 [dependencies]
 pom = "3.2.0"
